# LangX-RTU-release

./: LangX_Full_test_result_7800xt.txt
CMake_LangX/: CMakeLists.txt  CMakePresets.json  LxPDF.cpp  LxPDF.h  LxRAG.cpp  LxRAG.h  langX.cpp  langX.h  langX_layers.h  main.cpp  main_all_tests.cpp  main_memory.cpp  stubs.cpp
LX_DiscordBot/: bot.py
SolutionTest/: CMakeLists.txt  langx_test.cpp  langx_test.py  llamacpp_test.cpp  llamacpp_test_failed.py  llamalib_test.cpp  ollama_test.py  requirements.txt  result_langx_cpp_20260512_191636.txt  result_langx_cpp_20260512_191959.txt  result_langx_py_20260512_191126.txt  result_llamacpp_20260512_191843.txt  result_llamalib_20260512_195225.txt  result_ollama_20260512_191534.txt
langXpy/: CMakeLists.txt  bindings.cpp  test_bindings.py
logo/: logo.kra
